# Cont

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  ContController.cpp  ContController.sln  ContController.vcxproj  ContController.vcxproj.filters  Makefile  cmake_install.cmake  contClient.py  contServer.py  default_config.yaml  imgui.ini  resource.h
.github/workflows/: cmake-multi-platform.yml
Client/: contClient.py
Localization/: TR.yaml
Python/Client/: ControllerHandler.py  LocalizationHandler.py
Python/Client/Localization/: JP.yaml
Python/Server/: contServer.py
docker/linux/: .build.sh.swp  Dockerfile  build.sh
docker/windows/: Dockerfile  build.sh
include/: config.h  locHand.h
include/glad/: glad.h
include/yaml/: dll.h  emitfromevents.h  emitter.h  exceptions.h  fptostring.h  null.h  yaml.h
include/yaml/node/: convert.h  impl.h
include/yaml/node/detail/: iterator.h  memory.h  node_iterator.h
src/: glad.c  main.cpp
